<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jets</groupId>
    <artifactId>ChatApp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Chat_Application</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	    <maven.compiler.source>11</maven.compiler.source>
	    <maven.compiler.target>11</maven.compiler.target>
        <javafx.version>15.0.1</javafx.version>
        <mysql.version>8.0.23</mysql.version>
        <bootstrapfx.version>0.4.0</bootstrapfx.version>
        <ikonli.version>12.1.0</ikonli.version>
        <controlsfx.version>11.0.3</controlsfx.version>
        <tilesfx.version>11.47</tilesfx.version>
    </properties>


    <dependencies>



        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
            <version>1.4.7</version>
        </dependency>


        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>tilesfx</artifactId>
            <version>${tilesfx.version}</version>
        </dependency>


        <dependency>
            <groupId>org.kordamp.bootstrapfx</groupId>
            <artifactId>bootstrapfx-core</artifactId>
            <version>${bootstrapfx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsfx.version}</version>
        </dependency>


        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>



        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome5-pack</artifactId>
            <version>12.1.0</version>
        </dependency>
        <!--JavaFX External Libs-->
        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>tilesfx</artifactId>
            <version>${tilesfx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-materialdesign2-pack</artifactId>
            <version>${ikonli.version}</version>
        </dependency>

        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>${controlsfx.version}</version>
        </dependency>
        <!--    MY SQL DEP.-->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome5-pack</artifactId>
            <version>${ikonli.version}</version>
        </dependency>

        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>font-awesome</artifactId>
            <version>5.8.2</version>
        </dependency>
    </dependencies>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>11</source>
                        <target>11</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.2.4</version>
                    <configuration>
                        <transformers>
                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                        </transformers>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-maven-plugin</artifactId>
                    <version>0.0.5</version>
                    <configuration>
                        <options>
                            <!--===========================================CONTROL FX CONFIGS============================================-->
                            <!--                        Opening Controls-->
                            <option>--add-opens</option>
                            <option>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
                            <option>--add-opens</option>
                            <option>java.base/java.lang.reflect=com.jfoenix</option>
                            <!--                        Table Row expander Column-->
                            <option>--add-opens</option>
                            <option>javafx.controls/javafx.scene.control.skin=org.controlsfx.controls</option>
                            <!--                        Notification Pane Adding-->
                            <option>--add-exports</option>
                            <option>javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls</option>

                            <option>--add-exports</option>
                            <option>java.base/java.lang.reflect=com.jfoenix</option>

                            <option>--add-exports</option>
                            <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
                            <!--                        Auto complete binding adding-->
                            <option>--add-exports</option>
                            <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                            <!--                        Glyph Font Adding-->
                            <option>--add-exports</option>
                            <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
                            <!--===============================================JFOENIX CONFIGS========================================-->
                            <option>--add-opens</option>
                            <option>java.base/java.lang.reflect=com.jfoenix</option>
                            <option>--add-opens</option>
                            <option>javafx.graphics/javafx.css=com.jfoenix</option>
                            <option>--add-opens</option>
                            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                            <option>--add-opens</option>
                            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                            <option>--add-exports</option>
                            <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
                        </options>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

    </build>

    <modules>
        <module>ClientSide</module>
        <module>ServerSide</module>
        <module>Common</module>
    </modules>

</project>